[package]
name = "bitcoin_v0_2_revelation"
version = "0.3.3"
edition = "2021"

[dependencies]
# --- Networking / Async ---
tokio = { version = "1", features = ["full"] }
axum = "0.7"
rand = "0.8"
time = "0.3"
rpassword = "7.3"

# --- Serialization ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# --- Crypto / Encoding ---
sha2 = "0.10"
hex = "0.4"
secp256k1 = { version = "0.28", features = ["rand"] }
aes-gcm = "0.10"
pbkdf2 = "0.12"
zeroize = "1.7"
memsec = "0.6"
num-bigint = "0.4"
num-traits = "0.2"
bip39 = "2.0"

# --- Bluetooth (BLE) ---
btleplug = "0.11"
uuid = "1.7"
futures = "0.3"

# --- Android ---
[patch."https://github.com/jni-rs/jni-rs"]
jni = { version = "=0.21.1" }
