[package]
name = "aryabhatta-mobile-node"
version = "0.1.0"
edition = "2021"
description = "Survival-grade, physics-aware, mobile-first blockchain node"
authors = ["Aryabhatta Team"]
license = "Apache-2.0"
repository = "https://github.com/aryabhatta-project/aryabhatta-mobile-node"
readme = "README.md"
keywords = ["blockchain", "mobile", "cryptocurrency", "rust"]
categories = ["cryptography", "network-programming"]

# =========================================================
# BUILD PROFILES (LOCKED)
# =========================================================

[profile.dev]
opt-level = 1
debug = 1

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
debug = 0

[profile.mobile]
inherits = "release"
opt-level = "s"

# =========================================================
# FEATURES (MOBILE-FIRST)
# =========================================================

[features]
# Default build is ALWAYS mobile
default = ["mobile"]

# -------------------------
# CORE TARGETS
# -------------------------

mobile = [
    "light-crypto",
    "no-gui",
    "ram-buffer",
    "thermal-control",
    "network-outbound",
    "quic-mobile",
    "dep:libp2p",
    "dep:governor",
    "dep:battery"
]

desktop = [
    "gui",
    "heavy-crypto",
    "full-p2p",
    "dep:libp2p",
    "dep:redb"
]

# -------------------------
# OPTIONAL MODES
# -------------------------

stealth = ["dep:tor-support", "dep:i2p-support"]
post-quantum = ["dep:pqcrypto"]
zk-lite = []

# -------------------------
# INTERNAL FLAGS
# -------------------------

no-gui = []
ram-buffer = []
thermal-control = []
network-outbound = []
full-p2p = []
quic-mobile = []

gui = ["dep:iced", "dep:winit"]
heavy-crypto = ["dep:ring"]
light-crypto = ["blake3", "chacha20poly1305"]

# =========================================================
# DEPENDENCIES
# =========================================================

[dependencies]
# Async runtime (SINGLE, MOBILE-SAFE)
tokio = { version = "1.35", features = ["rt", "time", "sync", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0", default-features = false }

# Concurrency & memory
parking_lot = "0.12"
arc-swap = "1.6"
smallvec = "1.11"
bytes = "1.5"
lru = "0.12"

# Logging (ERROR-centric, flash-safe)
tracing = { version = "0.1", default-features = false }
tracing-subscriber = {
    version = "0.3",
    default-features = false,
    features = ["env-filter", "fmt"]
}

# Errors
thiserror = "1.0"

# =========================================================
# CRYPTOGRAPHY
# =========================================================

# Classical (efficient, proven)
ed25519-dalek = { version = "2.1", features = ["std", "batch"] }
sha2 = { version = "0.10", default-features = false }

# Mobile-efficient
blake3 = { version = "1.5", features = ["std"] }
chacha20poly1305 = { version = "0.10", features = ["std"] }
aes-gcm = { version = "0.10", features = ["std"] }
argon2 = { version = "0.5", features = ["std"] }

# Heavy crypto (DESKTOP ONLY)
ring = { version = "0.17", optional = true }

# Post-Quantum (EXPERIMENTAL / OPT-IN)
pqcrypto = { version = "0.1", optional = true }

# =========================================================
# NETWORKING (MOBILE-REALISTIC)
# =========================================================

libp2p = {
    version = "0.52",
    default-features = false,
    features = [
        "tcp",
        "dns",
        "noise",
        "yamux",
        "quic"      # Mobile-friendly transport
    ],
    optional = true
}

# =========================================================
# MOBILE SURVIVAL KIT
# =========================================================

# CPU / rate limiting (thermal safety)
governor = {
    version = "0.6",
    default-features = false,
    features = ["std", "jitter"],
    optional = true
}

# Battery awareness
battery = { version = "0.7", optional = true }

# Retry / backoff logic
backoff = "0.4"

# =========================================================
# DESKTOP STORAGE (NOT MOBILE)
# =========================================================

redb = { version = "1.4", optional = true }

# =========================================================
# GUI (DESKTOP ONLY)
# =========================================================

iced = { version = "0.12", default-features = false, optional = true }
winit = { version = "0.29", optional = true }

# =========================================================
# STEALTH (OPTIONAL, OFF BY DEFAULT)
# =========================================================

tor-support = {
    package = "arti",
    version = "1.1",
    optional = true,
    default-features = false
}

i2p-support = {
    package = "i2p",
    version = "0.1",
    optional = true
}

# =========================================================
# ANDROID / TERMUX
# =========================================================

[target.'cfg(target_os = "android")'.dependencies]
termux-wake-lock = { version = "0.1", optional = true }
jni = { version = "0.21", default-features = false, optional = true }
ndk = { version = "0.8", default-features = false, optional = true }
