[package]
name = "bitcoin-0.2"
version = "0.2.0"
edition = "2021"
description = "bitcoin-0.2 mobile-safe and future-aware node"
authors = ["bitcoin-0.2 contributors"]
license = "MIT"
repository = "https://github.com/foli-sketch/bitcoin-0.2"
readme = "README.md"

# ================================
# BUILD PROFILES (PHONE SAFE)
# ================================

[profile.dev]
opt-level = 1
debug = 1

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
debug = 0

[profile.mobile]
inherits = "release"
opt-level = "s"

# ================================
# FEATURES
# ================================

[features]
default = ["mobile"]

mobile = [
    "bitcoin-crypto",
    "light-crypto",
    "ram-buffer",
    "thermal-control",
    "network-outbound",
    "dep:libp2p",
    "dep:governor",
    "dep:battery"
]

desktop = [
    "bitcoin-crypto",
    "heavy-crypto",
    "full-p2p",
    "dep:libp2p",
    "dep:redb"
]

stealth = ["dep:tor-support", "dep:i2p-support"]
post-quantum = ["dep:pqcrypto"]

ram-buffer = []
thermal-control = []
network-outbound = []
full-p2p = []

bitcoin-crypto = ["dep:secp256k1", "dep:ripemd160", "dep:bech32"]
heavy-crypto = ["dep:ring"]
light-crypto = ["blake3", "chacha20poly1305"]

# ================================
# DEPENDENCIES
# ================================

[dependencies]
tokio = { version = "1.35", features = ["rt", "time", "sync", "macros"] }

serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0", default-features = false }

parking_lot = "0.12"
arc-swap = "1.6"
smallvec = "1.11"
bytes = "1.5"
lru = "0.12"

tracing = { version = "0.1", default-features = false }
tracing-subscriber = {
    version = "0.3",
    default-features = false,
    features = ["env-filter", "fmt"]
}

thiserror = "1.0"

# ================================
# BITCOIN CRYPTOGRAPHY
# ================================

secp256k1 = { version = "0.27", features = ["std", "recovery", "rand-std"], optional = true }
ripemd160 = { version = "0.1", optional = true }
bech32 = { version = "0.9", optional = true }

# ================================
# MOBILE-FRIENDLY CRYPTO
# ================================

blake3 = { version = "1.5", features = ["std"] }
chacha20poly1305 = { version = "0.10", features = ["std"] }
aes-gcm = { version = "0.10", features = ["std"] }
argon2 = { version = "0.5", features = ["std"] }

ring = { version = "0.17", optional = true }
pqcrypto = { version = "0.1", optional = true }

# ================================
# NETWORKING
# ================================

libp2p = {
    version = "0.52",
    default-features = false,
    features = ["tcp", "dns", "noise", "yamux", "quic"],
    optional = true
}

# ================================
# MOBILE SURVIVAL
# ================================

governor = {
    version = "0.6",
    default-features = false,
    features = ["std", "jitter"],
    optional = true
}

battery = { version = "0.7", optional = true }
backoff = "0.4"

# ================================
# DESKTOP STORAGE ONLY
# ================================

redb = { version = "1.4", optional = true }

# ================================
# STEALTH (OPTIONAL)
# ================================

tor-support = {
    package = "arti",
    version = "1.1",
    optional = true,
    default-features = false
}

i2p-support = {
    package = "i2p",
    version = "0.1",
    optional = true
}

# ================================
# ANDROID / TERMUX
# ================================

[target.'cfg(target_os = "android")'.dependencies]
termux-wake-lock = { version = "0.1", optional = true }
jni = { version = "0.21", default-features = false, optional = true }
ndk = { version = "0.8", default-features = false, optional = true }
